--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "metacrafters-project-5",
   "version": "0.1.0",
+  "homepage": "https://monishwarmc.github.io/solGenerator",
   "private": true,
   "dependencies": {
     "@solana/web3.js": "^1.75.0",
@@ -14,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
